<resources>
    <string name="app_name">MyNews</string>
    <string name="breaking_news">Новости</string>
    <string name="fav_news">Закладки</string>
    <string name="search_news">Поиск</string>
    <string name="search">Поиск новостей</string>
    <string name="query">Ваш запрос…</string>
    <string name="tools">Настройки</string>
    <string name="politic">Политика</string>
    <string name="menu">Меню</string>
    <string name="sport">Спорт</string>
    <string name="finance">Экономика</string>
    <string name="app_settings_title">Настройки приложения</string>
    <string name="night_mode_title">Ночной режим</string>
    <string name="title">TITLE</string>
    <string name="source">SOURCE</string>
    <string name="published_at">PUBLISHED AT</string>
    <string name="description">DESCRIPTION</string>
    <string name="add_to_favorit">add to favorit</string>
    <string name="country_code">ru</string>
    <string name="news_category">general</string>
    <string name="Load_result_error_text">Ошибка загрузки данных</string>
    <string name="retry">Retry</string>
    <string name="general">Главное</string>
    <string name="entertainment">Развлечения</string>
    <string name="health">Здоровье</string>
    <string name="science">Наука</string>
    <string name="technology">Технологии</string>
</resources>