<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
<group>
    <item
        android:id="@+id/general"
        android:title="@string/general"/>
    <item
        android:id="@+id/business"
        android:title="@string/finance"/>
    <item
        android:id="@+id/sports"
        android:title="@string/sport"/>
    <item
        android:id="@+id/health"
        android:title="@string/health"/>
    <item
        android:id="@+id/science"
        android:title="@string/science"/>
    <item
        android:id="@+id/technology"
        android:title="@string/technology"/>
    <item
        android:id="@+id/entertainment"
        android:title="@string/entertainment"/>
</group>
</menu>





