<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/bottomNavDrawerMenu"
        android:icon="@drawable/ic_baseline_menu_24"
        android:title="@string/menu"/>

    <item
        android:id="@+id/savedNewsFragment"
        android:icon="@drawable/ic_baseline_bookmarks_24"
        android:title="@string/fav_news" />

    <item
        android:id="@+id/breakingNewsFragment"
        android:icon="@drawable/ic_news"
        android:title="@string/breaking_news" />
    <item
        android:id="@+id/searchNewsFragment"
        android:icon="@drawable/ic_baseline_search_24"
        android:title="@string/search_news" />
    <item
        android:id="@+id/toolsBottomSheetFragment"
        android:icon="@drawable/ic_baseline_settings_24"
        android:title="@string/tools"/>

</menu>