<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
        <variable
            name="clickListener"
            type="android.view.View.OnClickListener"/>
        <variable
            name="uiModel"
            type="ru.maxdexter.mynews.ui.entity.UIModel" />
    </data>

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:onClick="@{clickListener}"
        app:cardCornerRadius="@dimen/min_elevation_2dp"
        app:cardElevation="@dimen/min_elevation_2dp">


        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="8dp">

            <androidx.appcompat.widget.AppCompatImageView
                android:id="@+id/ivArticleImage"
                android:layout_width="150dp"
                android:layout_height="100dp"
                app:setImage="@{uiModel.urlToImage}"
                android:scaleType="center"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/tvSource"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@{uiModel.sourceName}"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/tvPublishedAt"
                tools:text="@string/source" />

            <TextView
                android:id="@+id/tvTitle"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:ellipsize="end"
                android:layout_marginStart="@dimen/minimum_space_8dp"
                android:layout_marginTop="@dimen/minimum_space_8dp"
                android:maxLines="5"
                android:text="@{uiModel.title}"
                android:textSize="15sp"
                android:textStyle="bold"
                app:layout_constraintBottom_toBottomOf="@+id/ivArticleImage"
                app:layout_constraintLeft_toRightOf="@+id/ivArticleImage"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                tools:text="@string/title" />

            <TextView
                android:id="@+id/tvDescription"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:ellipsize="end"
                android:maxLines="5"
                android:layout_marginTop="@dimen/minimum_space_8dp"
                android:text="@{uiModel.description}"
                app:layout_constraintBottom_toTopOf="@+id/tvSource"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/ivArticleImage"
                tools:text="@string/description" />

            <TextView
                android:id="@+id/tvPublishedAt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/minimum_space_8dp"
                android:text="@{uiModel.publishedAt}"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tvDescription"
                tools:text="@string/published_at" />
        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.cardview.widget.CardView>
</layout>